k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wip
  labels:
    app.kubernetes.io/part-of: wip
